--- a/templates/commons/login.html
+++ b/templates/commons/login.html
@@ -266,31 +266,31 @@
     </div>
     </div>
 
-{#    <footer>#}
-{#        <nav class="navbar fixed-bottom navbar-expand-lg footer-custom">#}
-{#            <div class="container-fluid px-5">#}
-{#                <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent" style="color: white;">#}
-{#                    <div class="d-flex navbar-nav align-items-center justify-content-between" style="width: 100%;">#}
-{#                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">#}
-{#                                WHO ARE WE?#}
-{#                            </a>#}
-{#                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">#}
-{#                                CONTACT#}
-{#                            </a>#}
-{#                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'faq' %}" style="color: white;">#}
-{#                                FAQ#}
-{#                            </a>#}
-{#                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">#}
-{#                                SHERLOOK APP#}
-{#                            </a>#}
-{#                            <div>#}
-{#                                <img class="img-fluid" src="{% static 'images/croatian_flag.png' %}" style="height: 22px;">#}
-{#                            </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </nav>#}
-{#    </footer>#}
+        <footer>
+          <nav class="navbar fixed-bottom navbar-expand-lg footer-custom">
+            <div class="container-fluid px-5">
+               <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarSupportedContent" style="color: white;">
+                    <div class="d-flex navbar-nav align-items-center justify-content-between" style="width: 100%;">
+                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                WHO ARE WE?
+                            </a>
+                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                CONTACT
+                            </a>
+                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'faq' %}" style="color: white;">
+                                FAQ
+                            </a>
+                            <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
+                                SHERLOOK APP
+                            </a>
+                            <div>
+                                <img class="img-fluid" src="{% static 'images/croatian_flag.png' %}" style="height: 22px;">
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </footer>
 
 
 
