--- a/templates/commons/library.html
+++ b/templates/commons/library.html
@@ -57,16 +57,22 @@
 
 {% block body %}
 <div class="d-flex align-items-center justify-content-center px-md-4" id="library-body">
-    <div class="col-lg-11 col-md-12">
+    <div class="col-lg-12 col-md-12">
         <div class="row">
             <div class="d-flex justify-content-between align-items-center mt-5">
-                <div class="text-style-ro-60b pb-0 mb-0">LIBRARY</div>
-                <div class="">
+                <div>
+                    <div class="text-style-lato-24b d-flex px-3 py-2" style="background-image: linear-gradient(to right, #ED1C24 , #FF6B2C); border-radius: 10px; color: white;">
+                        <span>SAVED | 23</span> 
+                        <span class="ps-4">|  BOUGHT | 6</span>
+                    </div>
+                </div>
+                <!-- <div class="text-style-ro-60b pb-0 mb-0">LIBRARY</div> -->
+                <!-- <div class="">
                     <form>
                         <label class="text-style-ro-24b me-2" style="color: #100F0E !important;">SEARCH</label>
                         <input type="text" style="border: 1px solid black; border-radius: 6px; font-size: 24px; box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.25), -2px 5px 5px -1px rgba(0, 0, 0, 0.25);">
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="light-pink-box mt-5 px-5 pb-4" style="box-shadow: none; margin-bottom: 100px;">
