signup - new changes added

--- a/templates/commons/login.html
+++ b/templates/commons/login.html
@@ -248,7 +248,7 @@
                                     {% endfor %}
                                     <div class="d-flex justify-content-center">
                                         <button id="login-button" type="submit" style="width: 100%;" class="button-custom-style mt-4">
-                                            <i class="fa-solid fa-arrow-right-to-bracket" style="padding-right: 19px;"></i>
+                                            <i class="fa-solid fa-arrow-right-to-bracket pe-3" style=""></i>
                                                 Log-in
                                         </button>
                                     </div>
