--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,6 +92,19 @@ input[id="cb1"] {
     box-shadow: 2px 5px 5px -1px rgba(0, 0, 0, 0.2), -2px 5px 5px -1px rgba(0, 0, 0, 0.2);
 }
 
+.light-pink-box-without-shadow {
+    background-color: #FFF0EA;
+    border-radius: 20px;
+    border-color: #FFF0EA;
+}
+
+.light-pink-box-border {
+    background-color: #FFF0EA;
+    border-radius: 20px;
+    border: 3px solid #FF6B2C;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 .light-pink-input-h60 {
     height: 60px; 
     border-radius: 6px; 
@@ -205,7 +218,7 @@ input[id="cb1"] {
     font-size: 24px;
     font-family: 'Roboto';
     color: white;
-    line-height: 1.6px;
+    line-height: 28px;
     font-weight: 700;
 }
 
