--- a/templates/commons/dashboard.html
+++ b/templates/commons/dashboard.html
@@ -1,54 +1,85 @@
-{% extends 'base.html' %}
+{#{% extends 'base.html' %}#}
+{##}
+{#{% block content %}#}
+{#    <!-- Begin Page Content -->#}
+{#    <div class="container-fluid">#}
+{##}
+{#        <!-- Page Heading -->#}
+{#        <div class="d-sm-flex align-items-center justify-content-between mb-4 mt-4">#}
+{#            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>#}
+{#        </div>#}
+{##}
+{#        <!-- Main Content Here -->#}
+{#          <div class="row">#}
+{##}
+{#            <!-- Company Card Example -->#}
+{#            <div class="col-xl-3 col-md-6 mb-4">#}
+{#              <div class="card border-left-primary shadow h-100 py-2">#}
+{#                <div class="card-body">#}
+{#                  <div class="row no-gutters align-items-center">#}
+{#                    <div class="col mr-2">#}
+{#                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Companies</div>#}
+{#                      <div class="h5 mb-0 font-weight-bold text-gray-800">4,083</div>#}
+{#                    </div>#}
+{#                    <div class="col-auto">#}
+{#                      <i class="fas fa-home fa-2x text-gray-300"></i>#}
+{#                    </div>#}
+{#                  </div>#}
+{#                </div>#}
+{#              </div>#}
+{#            </div>#}
+{##}
+{#            <!-- Contact Card Example -->#}
+{#            <div class="col-xl-3 col-md-6 mb-4">#}
+{#              <div class="card border-left-warning shadow h-100 py-2">#}
+{#                <div class="card-body">#}
+{#                  <div class="row no-gutters align-items-center">#}
+{#                    <div class="col mr-2">#}
+{#                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Contacts</div>#}
+{#                      <div class="h5 mb-0 font-weight-bold text-gray-800">18,002</div>#}
+{#                    </div>#}
+{#                    <div class="col-auto">#}
+{#                      <i class="fas fa-comments fa-2x text-gray-300"></i>#}
+{#                    </div>#}
+{#                  </div>#}
+{#                </div>#}
+{#              </div>#}
+{#            </div>#}
+{#          </div>#}
+{##}
+{##}
+{##}
+{#    </div>#}
+{#    <!-- /.container-fluid -->#}
+{#{% endblock content %}#}
 
-{% block content %}
-    <!-- Begin Page Content -->
-    <div class="container-fluid">
 
-        <!-- Page Heading -->
-        <div class="d-sm-flex align-items-center justify-content-between mb-4 mt-4">
-            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+{% extends "commons/layout.html" %}
+
+{% load static %}
+{% load crispy_forms_tags %}
+
+{% block title %}Django CRM - Dashboard{% endblock %}
+{% block body %}
+<div class="col-12 px-4 py-5 col container-fluid" style="width: 100%; height: 100%;">
+    <div class="light-pink-box-without-shadow p-5" style="height: 100%;">
+        <div class="light-pink-box-border d-flex align-items-center" style="height: 100%;">
+            <div class="d-flex align-items-center">
+                <div class="col-4">
+                    <img class="img-fluid" src="{% static 'images/dashboard_img.png' %}">
+                </div>
+                <div class="col-8 text-center">
+                    <div class="text-style-ro-60b" style="background: linear-gradient(to right, #ED1C24, #FF6B2C); -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;">COMING SOON</div>
+                    <div class="mt-1 mb-3 mx-5 px-5" style="">
+                        <div style="box-shadow: 0 4px 4px 0px rgba(0, 0, 0, 0.25);">
+                            <div style="height: 3px; background-color: #FD612C;"></div>
+                        </div>
+                    </div>
+                    <div class="text-style-ro-24b" style="font-weight: 500 !important; color: black">FOR MORE INFO CONTACT: INFO@2XT-AGENCY.COM</div>
+                </div>
+            </div>
         </div>
-
-        <!-- Main Content Here -->
-          <div class="row">
-
-            <!-- Company Card Example -->
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-primary shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Companies</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">4,083</div>
-                    </div>
-                    <div class="col-auto">
-                      <i class="fas fa-home fa-2x text-gray-300"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Contact Card Example -->
-            <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-warning shadow h-100 py-2">
-                <div class="card-body">
-                  <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Contacts</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">18,002</div>
-                    </div>
-                    <div class="col-auto">
-                      <i class="fas fa-comments fa-2x text-gray-300"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-
     </div>
-    <!-- /.container-fluid -->
-{% endblock content %}
+</div>
+{% endblock %}
