--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -64,14 +64,14 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="shopping-cart-button" href="#" data-bs-toggle="popover" data-bs-placement="bottom" title="YOUR CART" data-popover-content="#popover-cart" data-html="true" data-bs-custom-class="custom-cart-popover">
-                                <i class="fa-solid fa-cart-shopping" style="font-size: 1.5vw; color: white;"></i>
+{#                                <i class="fa-solid fa-cart-shopping" style="font-size: 1.5vw; color: white;"></i>#}
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active ms-md-2 me-md-1" aria-current="page" href="{% url 'profile' %}">
-                                <i class="fa-regular fa-user" style="font-size: 1.5vw; color: white;"></i>
-                            </a>
-                        </li>
+{#                        <li class="nav-item">#}
+{#                            <a class="nav-link active ms-md-2 me-md-1" aria-current="page" href="{% url 'profile' %}">#}
+{#                                <i class="fa-regular fa-user" style="font-size: 1.5vw; color: white;"></i>#}
+{#                            </a>#}
+{#                        </li>#}
                     </ul>
                 </div>
                 <!-- <div style="color: white;" class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo01">
@@ -133,68 +133,68 @@
         
 
         <!-- Notification popover -->
-        <div class="hidden" id="popover-notification" style="display: none; width: 500px;">
-            <div class="popover-heading">
-              NOTIFICATIONS
-            </div>
-            
-            <div class="popover-body popover-notification-body">
-                <div class="text-style-ro-18b-popover" style="font-variant: small-caps;">Item that you bought has been updated.</div>
-                <hr>
-                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Item that you bought has been updated.</div>
-                <hr>
-                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Support has answered you inquiry. Check your e-mail.</div>
-                <hr>
-                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Purchase successful. Your receipt has been sent to your e-mail.</div>
-            </div>
-        </div>
+{#        <div class="hidden" id="popover-notification" style="display: none; width: 500px;">#}
+{#            <div class="popover-heading">#}
+{#              NOTIFICATIONS#}
+{#            </div>#}
+{#            #}
+{#            <div class="popover-body popover-notification-body">#}
+{#                <div class="text-style-ro-18b-popover" style="font-variant: small-caps;">Item that you bought has been updated.</div>#}
+{#                <hr>#}
+{#                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Item that you bought has been updated.</div>#}
+{#                <hr>#}
+{#                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Support has answered you inquiry. Check your e-mail.</div>#}
+{#                <hr>#}
+{#                <div class="text-style-ro-18b-popover" style="font-variant: small-caps; text-align: center;">Purchase successful. Your receipt has been sent to your e-mail.</div>#}
+{#            </div>#}
+{#        </div>#}
 
         <!-- Shopping cart popover -->
-        <div class="hidden" id="popover-cart" style="display: none;">
-            <div class="popover-heading">
-              YOUR CART
-            </div>
-            
-            <div class="popover-body">
-                <div>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="text-style-ro-16b text-center">Fluid dynamics</div>
-                        <div class="d-flex align-items-center">
-                            <span class="align-middle text-style-qs-16 me-1" style="line-height: 19px !important; vertical-align: middle; border: 0px;">VERIFIED AT FS ALPE ADRIA</span>
-                            <span style="font-size: 12px!important; line-height: 19px; vertical-align: middle; border: 0px;">&#x2705</span></div>
-                        </div>
-                    <div class="text-style-ro-16b mt-1">Mechanical Eng</div>
-                    <div class="text-style-ro-16b mt-1">Germany</div>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="text-style-ro-22b" style="color:#FF6B2C">23</div>
-                        <div class="text-style-rso-18">300 💰 credits</div>
-                    </div>
-                    
-                    <hr>
-
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="text-style-ro-16b text-center">Fluid dynamics</div>
-                        <div class="d-flex align-items-center">
-                            <span class="align-middle text-style-qs-16 me-1" style="line-height: 19px !important; vertical-align: middle; border: 0px;">VERIFIED AT FS ALPE ADRIA</span>
-                            <span style="font-size: 12px!important; line-height: 19px; vertical-align: middle; border: 0px;">&#x2705</span></div>
-                        </div>
-                    <div class="text-style-ro-16b mt-1">Mechanical Eng</div>
-                    <div class="text-style-ro-16b mt-1">Germany</div>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="text-style-ro-22b" style="color:#FF6B2C">23</div>
-                        <div class="text-style-rso-18">300 💰 credits</div>
-                    </div>
-
-                    <hr>
-
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="text-style-rso-22">TOTAL:</div>
-                        <div class="text-style-rso-18">600 💰 credits</div>
-                        <div><button class="orange-button">CHECKOUT</button></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+{#        <div class="hidden" id="popover-cart" style="display: none;">#}
+{#            <div class="popover-heading">#}
+{#              YOUR CART#}
+{#            </div>#}
+{#            #}
+{#            <div class="popover-body">#}
+{#                <div>#}
+{#                    <div class="d-flex justify-content-between align-items-center">#}
+{#                        <div class="text-style-ro-16b text-center">Fluid dynamics</div>#}
+{#                        <div class="d-flex align-items-center">#}
+{#                            <span class="align-middle text-style-qs-16 me-1" style="line-height: 19px !important; vertical-align: middle; border: 0px;">VERIFIED AT FS ALPE ADRIA</span>#}
+{#                            <span style="font-size: 12px!important; line-height: 19px; vertical-align: middle; border: 0px;">&#x2705</span></div>#}
+{#                        </div>#}
+{#                    <div class="text-style-ro-16b mt-1">Mechanical Eng</div>#}
+{#                    <div class="text-style-ro-16b mt-1">Germany</div>#}
+{#                    <div class="d-flex justify-content-between align-items-center">#}
+{#                        <div class="text-style-ro-22b" style="color:#FF6B2C">23</div>#}
+{#                        <div class="text-style-rso-18">300 💰 credits</div>#}
+{#                    </div>#}
+{#                    #}
+{#                    <hr>#}
+{##}
+{#                    <div class="d-flex justify-content-between align-items-center">#}
+{#                        <div class="text-style-ro-16b text-center">Fluid dynamics</div>#}
+{#                        <div class="d-flex align-items-center">#}
+{#                            <span class="align-middle text-style-qs-16 me-1" style="line-height: 19px !important; vertical-align: middle; border: 0px;">VERIFIED AT FS ALPE ADRIA</span>#}
+{#                            <span style="font-size: 12px!important; line-height: 19px; vertical-align: middle; border: 0px;">&#x2705</span></div>#}
+{#                        </div>#}
+{#                    <div class="text-style-ro-16b mt-1">Mechanical Eng</div>#}
+{#                    <div class="text-style-ro-16b mt-1">Germany</div>#}
+{#                    <div class="d-flex justify-content-between align-items-center">#}
+{#                        <div class="text-style-ro-22b" style="color:#FF6B2C">23</div>#}
+{#                        <div class="text-style-rso-18">300 💰 credits</div>#}
+{#                    </div>#}
+{##}
+{#                    <hr>#}
+{##}
+{#                    <div class="d-flex justify-content-between align-items-center">#}
+{#                        <div class="text-style-rso-22">TOTAL:</div>#}
+{#                        <div class="text-style-rso-18">600 💰 credits</div>#}
+{#                        <div><button class="orange-button">CHECKOUT</button></div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
 
         <div class="" style="min-height: 100%; display: flex; flex-direction: column;">
             <div class="row" style="flex: 1; display: flex; width: 100%;">
@@ -202,8 +202,8 @@
                 <div style="padding-top: 200px;">
                     <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/search/' %}active{% endif %}" href="{% url 'search' %}" style="color: white;">SEARCH</a>
                     <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/library/' %}active{% endif %}" href="{% url 'library' %}" style="color: white;">LIBRARY</a>
-                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/dashboard/' %}active{% endif %}" href="#" style="color: white;">DASHBOARD</a>
-                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/info/' %}active{% endif %}" href="#" style="color: white;">INFO</a>
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'dashboard' %}" style="color: white;">DASHBOARD</a>
+                    <a class="side-nav-link nav-link text-center text-style-ro-30b py-1 mb-2 {% if request.path == '/info/' %}active{% endif %}" href="{% url 'info' %}"  style="color: white;">INFO</a>
                 </div>
               </div>
               <div class="offset-2 pl-0" style="width: 84%; flex-grow: 1;">
@@ -221,13 +221,13 @@
                     </button>
                     <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo02" style="color: white;">
                         <div class="d-flex navbar-nav align-items-center justify-content-between" style="width: 100%;">
-                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'info' %}" style="color: white;">
+                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
                                     WHO ARE WE?
                                 </a>
                                 <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
                                     CONTACT
                                 </a>
-                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="{% url 'faq' %}" style="color: white;">
+                                <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
                                     FAQ
                                 </a>
                                 <a class="nav-link active text-style-ro-22b" aria-current="page" href="#" style="color: white;">
