--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -114,7 +114,7 @@
             </div> -->
             <div class="d-flex col-12 justify-content-end mt-5 px-5 mb-5 align-items-center">
                 <div class="col-2 text-center">
-                    <button class="orange-button text-style-ro-24b py-3" style="font-weight: 400 !important; box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07);">
+                    <button class="orange-button text-style-ro-24b" style="font-weight: 400 !important; box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07);">
                         SEARCH
                     </button>
                 </div>
