added save method

--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -54,7 +54,8 @@
                     <ul class="navbar-nav d-flex" style="width: 100%;">
                         <li class="nav-item ms-sm-auto">
                             <a class="nav-link active ms-md-2 me-md-3" aria-current="page" id="search-button" href="{% url 'search' %}" title="SEARCH">
-                                <i class="fa-solid fa-magnifying-glass" style="font-size: 1.5vw; color: white;"></i>
+{#                                <i class="fa-solid fa-magnifying-glass" style="font-size: 1.5vw; color: white;"></i>#}
+                                <i class="fa-regular fa-user" style="font-size: 1.5vw; color: white;"></i>
                             </a>
                         </li>
                         <li class="nav-item">
