--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -367,8 +367,8 @@
                         </div>
                         <div class="col-3 ms-2">
                             <div class="ps-4">
-                                <button data-student-id="{{ student.id }}" class="save-button orange-button text-style-ro-24b py-3 save-button" style="width: 60% !important; font-weight: 500; box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07);">SAVE</button>
-                                </div>
+                                <button data-student-id="{{ student.id }}" class="save-button orange-button text-style-ro-24b save-button" style="width: 60% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">SAVE</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -583,8 +583,8 @@
                         </div>
                         <div class="col-3 ms-2">
                             <div class="ps-4">
-                                <button class="connect-button orange-button text-style-ro-24b py-3" style="width: 60% !important; font-weight: 500; box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07);">SAVE</button>
-                                </div>
+                                <button class="connect-button orange-button text-style-ro-24b" style="width: 60% !important; font-weight: 500; box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07);">SAVE</button>
+                            </div>
                         </div>
                     </div>
                 </div>
